myteo/test/parser/ast/pattern/bool_literal_error.exp
Error: Literals cannot appear in variable declaration patterns
test/parser/ast/pattern/bool_literal_error.myte:3:8-12
 3 | val (x, true, y): int = 1
   |         ^^^^