myteo/test/parser/ast/pattern/bool_literal_error.myte
module test

val (x, true, y): int = 1